家校圈协议修改完成

--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -34,10 +34,10 @@
 				<span class="mui-tab-label">问答</span>
 			</a>
 
-			<a class="mui-tab-item" href="clip/clip_sub.html">
+			<!--<a class="mui-tab-item" href="clip/clip_sub.html">
 				<span class="mui-icon mui-icon-chatboxes"></span>
 				<span class="mui-tab-label">视频</span>
-			</a>
+			</a>-->
 			<a class="mui-tab-item" href="cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-yunpan"></span>
 				<span class="mui-tab-label">云盘</span>
