--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -143,6 +143,7 @@
 							break;
 							//设置
 						case 6:
+						events.openNewWindow('mine/setting.html')
 							break;
 							//关于
 						case 7:
