--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -7,31 +7,12 @@
 		<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<link rel="stylesheet" href="../css/utils/common.css" />
 		<link rel="stylesheet" href="../css/mui.min.css">
 		<link rel="stylesheet" href="../css/home/index-menu.css" />
 		<link rel="stylesheet" href="../css/iconfont/iconfont.css" />
 
-		<style type="text/css">
-			body,
-			.mui-content {
-			}
-
-			.title {
-				margin: 35px 15px 10px;
-			}
-
-			.title+.content {
-				margin: 10px 15px 35px;
-				color: #bbb;
-				text-indent: 1em;
-				font-size: 14px;
-				line-height: 24px;
-			}
-
-			.mui-table-view {
-				margin-bottom: 35px;
-			}
-		</style>
+	
 	</head>
 
 	<body>
@@ -40,46 +21,44 @@
 			<div id="title" class="title">
 				<img id="uimg" src="../image/slide_navigation/img3.jpg" class="head-portrait" /><br />
 				<h4 id="uname">姓名</h4>
-				<sub id="utext">暂无信息</sub>
+				<p id="utext">暂无信息</p>
 			</div>
 			
 			
 			<ul class="mui-table-view mui-table-view-chevron" >
 				<li class="mui-table-view-cell" position='0'>
 					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-qunziliao app-icon"></span> 群资料
+						<span class="mui-icon iconfont icon-qunziliao"></span> 群资料
 					</a>
 				</li>
 				<li class="mui-table-view-cell" position='1'>
 					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-group app-icon"></span> 群管理
+						<span class="mui-icon iconfont icon-group"></span> 群管理
 					</a>
 				</li>
 				<li class="mui-table-view-cell" position='2'>
 					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-jiaqun record-icon"></span> 申请加入群
+						<span class="mui-icon iconfont icon-jiaqun"></span> 申请加入群
 					</a>
 				</li>
-			</ul>
-			<ul class="mui-table-view mui-table-view-chevron ">
+				<li class="mui-table-view-divider"></li>
 				<li class="mui-table-view-cell" position='3'>
 					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-newmessage set-icon"></span> 新消息
+						<span class="mui-icon iconfont icon-newmessage"></span> 新消息
 					</a>
 				</li>
 
 				<li class="mui-table-view-cell" position='4'>
 					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-zone about-icon"></span> 我的空间
+						<span class="mui-icon iconfont icon-zone"></span> 我的空间
 					</a>
 				</li>
 				<li class="mui-table-view-cell" position='5'>
 					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-jiaqun about-icon"></span> 积分
+						<span class="mui-icon iconfont icon-jifen"></span> 积分
 					</a>
 				</li>
-			</ul>
-			<ul class="mui-table-view mui-table-view-chevron" >
+				<li class="mui-table-view-divider"></li>
 				<li class="mui-table-view-cell" position='6'>
 					<a class="mui-navigate-right">
 						<span class="mui-icon iconfont icon-shezhi about-icon"></span> 设置
