--- a/JiaoBaoYun-hb/html/mine/edit-groupInfo.html
+++ b/JiaoBaoYun-hb/html/mine/edit-groupInfo.html
@@ -10,13 +10,14 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/mine/edit-info.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">标题</h1>
-			<button id="btn-save" type="button" class="mui-btn mui-btn-green mui-pull-right">保存</button>
+			<a id="btn-save" class="mui-pull-right">保存</button>
 		</header>
 		<div class="mui-content">
 			<!--输入框-->
