--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -8,13 +8,14 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<link href="../../css/mine/edit-info.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 id="title" class="mui-title">标题</h1>
-		    <button id="save" class="mui-btn mui-btn-green mui-pull-right">保存</button>
+		    <a id="save" class= "mui-pull-right">保存</a>
 		</header>
 		<div class="mui-content">
 			<input id="input-content" type="text" class="mui-input-clear" placeholder="带清除按钮的输入框">
