--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -18,7 +18,7 @@
 		<div class="mui-content">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" id="yinsi">
+					<a class="mui-navigate-right" id="yinsi" href="privacy.html">
 						隐私
 					</a>
 				</li>
