--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -22,7 +22,7 @@
 		               <li class="mui-table-view-cell">
 		                   <a href="#picture">
 		                       <img class="mui-media-object mui-pull-right" id="img" src="../../image/slide_navigation/img3.jpg">
-		                       <div style="">
+		                       <div class="mui-pull-left ">
 		                          头像
 		                       </div>
 		                   </a>
@@ -56,9 +56,9 @@
 		               </li>
 		               <li class="mui-table-view-cell mui-media open-newPage" pos='1'>
 		                   <a href="javascript:;">
-		                      <p class="mui-pull-right" id='phone'>暂无</p> 
+		                      <p class="mui-pull-right" id='email'>暂无</p> 
 		                       <div class="mui-media-body">
-		               	电话          
+		               	电子邮箱         
 		         
 		                       </div>
 		                   </a>
