--- a/JiaoBaoYun-hb/html/mine/privacy.html
+++ b/JiaoBaoYun-hb/html/mine/privacy.html
@@ -7,12 +7,13 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/mine/edit-info.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">标题</h1>
+		    <h1 class="mui-title">隐私设置</h1>
 		    <a class="mui-pull-right">完成</a>
 		</header>
 		<ul class="mui-content mui-table-view">
