修改邮箱 细节错误

--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -88,7 +88,7 @@
 						inText.type='email';
 						if(pInfo.uphone){
 							title.innerText='更改电子邮箱';
-							inText.value=pInfo.uphone
+							inText.value=pInfo.uemail;
 						}else{
 							title.innerText='填写电子邮箱'
 						}
