--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -227,7 +227,7 @@
 								};
 								postDataPro_PostUinf(comData1, wd, function(data) {
 									wd.close();
-									console.log('获取个人信息success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+//									console.log('获取个人信息success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 									if(data.RspCode == 0) {
 										var tepI0000 = data.RspData[0];
 										//存储个人信息
@@ -239,6 +239,7 @@
 										tempInfo.utxt = data.RspData.utxt;
 										tempInfo.uimg = data.RspData.uimg;
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
+										console.log('登录保存的个人信息：'+JSON.stringify(tempInfo))
 										//跳到主界面
 										events.openNewWindowWithData('../../html/index.html', '');
 									} else {
