--- a/JiaoBaoYun-hb/html/mine.html
+++ b/JiaoBaoYun-hb/html/mine.html
@@ -84,16 +84,10 @@
 			});
 			//获得侧滑主窗口webview对象
 			var main = null;
-			var personalInfo = null;
 			mui.plusReady(function() {
 				main = plus.webview.currentWebview().opener();
-				//获取个人信息
-				personalInfo = myStorage.getItem(storageKeyName.PERSONALINFO);
-				console.log('我的界面：'+JSON.stringify(personalInfo))
-
 				//展示个人信息
-				setInfo(personalInfo)
-					//				events.jumpPage(document.getElementById('title'),'mine/account-info.html');
+				setInfo()
 					//点击title跳转到账号信息界面
 				events.addTap('title', function() {
 					closeMenu()
@@ -138,6 +132,10 @@
 					}
 				
 				});
+				//加载数据监听
+				window.addEventListener('infoChanged',function(){
+					setInfo();
+				})
 			})
 
 			/**
@@ -151,7 +149,9 @@
 			 * "utxt":"",
 			 * "uimg":""}
 			 */
-			function setInfo(info) {
+			function setInfo() {
+				var info= myStorage.getItem(storageKeyName.PERSONALINFO);
+				console.log('我的界面：'+JSON.stringify(info))
 				if(info.uimg) {
 					document.getElementById('uimg').src = info.uimg;
 				}
