--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -26,6 +26,7 @@
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/libs/myStorage/myStorage.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
 			mui.init()
 			mui.plusReady(function(){
@@ -64,7 +65,8 @@
 						pInfo[vtpKey]=inText.value;
 						window.myStorage.setItem(storageKeyName.PERSONALINFO,pInfo)
 						console.log('更改后信息:'+JSON.stringify(pInfo));
-						mui.fire(curpage.opener(),'infoChanged')
+						mui.fire(curpage.opener(),'infoChanged');
+						events.fireToPageNone('mine.html','infoChanged');
 						mui.back()
 					}else{
 						mui.toast(data.RspTxt);
