修改email不传值的小bug

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -1,3 +1,5 @@
+<!--账号信息界面-->
+<!--@anthor an-->
 <!doctype html>
 <html>
 
@@ -67,8 +69,7 @@
 		                   <a href="javascript:;">
 		                      <p class='mui-pull-right' id="txt">暂无</p>
 		                       <div class="mui-media-body">
-		                个性签名          
-		         
+		               	 个性签名          
 		                       </div>
 		                   </a>
 		               </li>
