--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -88,7 +88,7 @@
 					break;
 					case 1:
 						inText.type='email';
-						if(pInfo.uphone){
+						if(pInfo.uemail){
 							title.innerText='更改电子邮箱';
 							inText.value=pInfo.uemail;
 						}else{
