--- a/JiaoBaoYun-hb/html/mine/edit-groupInfo.html
+++ b/JiaoBaoYun-hb/html/mine/edit-groupInfo.html
@@ -17,11 +17,10 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">标题</h1>
-			<a id="btn-save" class="mui-pull-right">保存</button>
+			<a id="btn-save" class="mui-pull-right">保存</a>
 		</header>
 		<div class="mui-content">
-			<!--输入框-->
-			<input id="input-text" type="text" class="mui-input-clear" placeholder="带清除按钮的输入框">
+			<input id="input-text" type="text" class="mui-input-clear" placeholder="带清除按钮的输入框"/>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<!--公共接口-->
