修改设置、修改密码界面

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -11,9 +11,9 @@
 
 	<body>
 		<header id="header" class="mui-bar mui-bar-nav">
-			 <a id='back' class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
+			<a id='back' class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
 			<a class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="font-size: 18px;">取消</a>
-			<h1 class="mui-title">修改密码</h1>
+			<h1 id="navTitle" class="mui-title">修改密码</h1>
 		</header>
 		<div class="mui-content">
 			<br/>
@@ -58,26 +58,36 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
+				var tempFlag = 0; //0我普通，1为修改密码，2为设置密码
 				//获取当前页面
-				var curPage=plus.webview.currentWebview();
-				var oldPassword=document.getElementById('old-password');
-				var back=document.getElementById('back');
-				window.addEventListener('changePasswords',function(){
-					oldPassword.style.display='block';
-					document.getElementById('cancelBtn').style.display='none';
-					back.style.display='inline-block';
-				})
+				var curPage = plus.webview.currentWebview();
+				var oldPassword = document.getElementById('old-password');
+				var navTitle = document.getElementById('navTitle');
+				var back = document.getElementById('back');
+				//修改密码
+				window.addEventListener('changePasswords', function() {
+					oldPassword.style.display = 'block';
+					document.getElementById('cancelBtn').style.display = 'none';
+					back.style.display = 'inline-block';
+					tempFlag = 1;
+				});
+				//设置密码
+				window.addEventListener('settingPW', function() {
+					tempFlag = 2;
+					navTitle.innerHTML = '设置密码';
+					document.getElementById('cancelBtn').style.display = 'none';
+				});
 				//上级传值如果是1，是修改密码
-//				if(curPage.data&&curPage.data==1){
-//					oldPassword.style.display='block';
-//					document.getElementById('cancelBtn').style.display='none';
-//					back.style.display='inline-block';
-//				//设置密码
-//				}else{
-//					oldPassword.style.display='none';
-//					document.getElementById('cancelBtn').style.display='inline-block';
-//					back.style.display='none';
-//				}
+				//				if(curPage.data&&curPage.data==1){
+				//					oldPassword.style.display='block';
+				//					document.getElementById('cancelBtn').style.display='none';
+				//					back.style.display='inline-block';
+				//				//设置密码
+				//				}else{
+				//					oldPassword.style.display='none';
+				//					document.getElementById('cancelBtn').style.display='inline-block';
+				//					back.style.display='none';
+				//				}
 				//点击修改密码方法
 				events.addTap('modifypassword', function() {
 					var newpw0 = document.getElementById("password0").value;
@@ -133,19 +143,31 @@
 								token: personalToken
 							};
 							//发送网络请求，data为网络返回值
-							postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
-								//成功，关闭等待框
-								wd.close();
-								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-								if(data.RspCode != 0000) {
-									mui.toast(data.RspTxt);
-									return;
-								} else {
-									window.myStorage.getItem(window.storageKeyName.PERSONALINFO).ispw = '1';
-									mui.toast('修改密码成功');
-									events.openNewWindowWithData('../../html/index.html','');
-								}
-							});
+							if(tempFlag == 0 || tempFlag == 2) {
+								postDataEncry(storageKeyName.MAINURL + 'PostRePW', enData, comData, 0, wd, function(data) {
+									//成功，关闭等待框
+									wd.close();
+									console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+									if(data.RspCode != 0000) {
+										mui.toast(data.RspTxt);
+										return;
+									} else {
+										if(tempFlag == 0) {
+											window.myStorage.getItem(window.storageKeyName.PERSONALINFO).ispw = '1';
+											mui.toast('修改密码成功');
+											events.openNewWindowWithData('../../html/index.html', '');
+										} else { //在设置里面退出时，设置密码
+											//修改自动登录值
+											window.myStorage.setItem(window.storageKeyName.PERSONALINFO,null);
+											//跳转到登录界面
+											events.openNewWindowWithData('../../html/register/login.html', '');
+										}
+									}
+								});
+							} else { //修改密码，需要原先密码
+
+							}
+
 						} else {
 							mui.toast(data.RspTxt);
 						}
@@ -153,7 +175,7 @@
 				});
 				//取消按钮
 				events.addTap('cancelBtn', function() {
-					events.openNewWindowWithData('../../html/index.html','');
+					events.openNewWindowWithData('../../html/index.html', '');
 				});
 			});
 		</script>
