--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -29,7 +29,7 @@
 			        </li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right" id="quit">
-						退出
+						退出登录
 					</a>
 				</li>
 			</ul>
@@ -50,7 +50,7 @@
 				//修改密码
 				events.preload('../register/modify_password.html',100);
 				events.addTap('change-passwords',function(){
-					events.fireToPageNone('../register/modify_password.html','changePasswords')
+					events.fireToPageNone('../register/modify_password.html','changePasswords');
 					events.openNewWindow('../register/modify_password.html');
 				})
 				//退出
@@ -69,10 +69,19 @@
 							case 0: //取消
 								break;
 							case 1: //退出登录
-								//修改自动登录值
-								window.myStorage.setItem(window.storageKeyName.PERSONALINFO,null);
-								//跳转到登录界面
-								events.openNewWindowWithData('../../html/register/login.html', '');
+								//判断是否设置了密码
+								//存储个人信息
+								var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
+								if (Number(tempInfo.ispw) == 1) {//有密码
+									//修改自动登录值
+									window.myStorage.setItem(window.storageKeyName.PERSONALINFO,null);
+									//跳转到登录界面
+									events.openNewWindowWithData('../../html/register/login.html', '');
+								} else{//无密码
+									events.fireToPageNone('../register/modify_password.html','settingPW');
+									events.openNewWindow('../register/modify_password.html');
+								}
+								
 								break;
 						}
 					});
