--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -21,7 +21,10 @@
 
 		<!--侧滑-->
 		<script type="text/javascript" src="../../js/main/slide_navigation.js"></script>
-		<script>var datasource;</script>
+		<script>
+		var datasource;
+		var model_homeSchoolList;
+		</script>
 		<style type="text/css">/*自定义系统segmentcontrol控件*/
 
 
@@ -91,7 +94,7 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--第一个列表-->
-				<ul class="mui-table-view">
+				<ul id="top-list" class="mui-table-view ">
 					<!--学生动态入口start-->
 					<li class="mui-table-view-cell mui-media studentsdynamic">
 						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
@@ -102,7 +105,7 @@
 						</div>
 					</li>
 					<!--学生动态入口end-->
-					<li class="mui-table-view-cell mui-media tarClass">
+					<!--<li class="mui-table-view-cell mui-media tarClass">
 
 						<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">
 						<p class="time">10月19</p>
@@ -121,7 +124,7 @@
 							<p class='mui-ellipsis'>在今天的全校演讲比赛中，我班有6名同学获奖...</p>
 						</div>
 
-					</li>
+					</li>-->
 
 				</ul>
 
